tests/NormalTests/paczka1/fuzzy1/51524031.err
Error in line 1: htWUVVtqT S850 87,7
Error in line 3: 4Mf A744 61,3
Error in line 20: P35z S850 -3,0
Error in line 21: htWUVVtqT A744 11,0
Error in line 18: P35z S850 74,7
Error in line 37: P35z A744 22,1
